chore: fixed login font sizes and spacing

--- a/src/app/css/common_style.css
+++ b/src/app/css/common_style.css
@@ -972,33 +972,32 @@ h3 {
 
 /* Page title */
 .h1-login {
-    font-size: 55px;
-    margin: 15px;
+    font-size: 40px;
+    margin: 10px;
     font-weight: bold;
 }
 
 /* Get in touch text */
 .h4-login {
-    font-size: 20px;
+    font-size: 14px;
     margin-top: 10px;
 }
 
 /* Page description text */
 .label-login {
     color: #646464;
-    font-size: 25px;
-    width: 350px;
+    font-size: 18px;
+    width: 250px;
     margin-bottom: 40px;
-    font-weight: bold;
 }
 
 /* Credentials input form */
 .input-login {
-    width: 450px;
+    width: 350px;
     height: 43px;
     font-size: 25px;
     margin: 10px;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     padding-left: 10px;
     padding-right: 10px;
     border: 0;
@@ -1016,14 +1015,15 @@ h3 {
 }
 
 .login-button {
-    width: 350px;
-    height: 57px;
+    width: 250px;
+    height: 40px;
     text-transform: uppercase;
     text-align: center;
     letter-spacing: 1px;
     background-color: rgb(224, 169, 66);
-    font-size: 25px;
+    font-size: 1.25rem;
     font-weight: bold;
+    margin-top: 1rem;
     margin-bottom: 10px;
     border: none;
     cursor: pointer;
@@ -1037,6 +1037,7 @@ h3 {
     color: #7b0303;
     margin-top: 30px;
     margin-bottom: 0PX;
+    font-size: 14px;
     text-align: center;
     display: none;
     letter-spacing: 1px;
@@ -1056,7 +1057,7 @@ h3 {
     color: orange;
     text-decoration: none;
     margin-top: 10px;
-    font-size: 20px;
+    font-size: 14px;
 }
 
 /* -- MEDIA QUERYS -- */
@@ -1072,34 +1073,37 @@ h3 {
     
     /* Page title */
     .h1-login {
-        font-size: 35px;
+        font-size: 2rem;
     }
 
     /* Get in touch text */
     .h4-login {
         font-size: 15px;
     }
-    
+
     /* Page description text */
     .label-login {
-        font-size: 20px;
+        font-size: 1rem;
+        width: 200px;
     }
 
     /* Credentials input form */
     .input-login {
         width: 300px;
+        margin: 1rem 0;
     }
     
     .login-button {
-        width: 300px;
-        height: 50px;
+        width: 230px;
+        height: 40px;
         text-transform: uppercase;
         text-align: center;
         letter-spacing: 1px;
         background-color: rgb(224, 169, 66);
-        font-size: 25px;
+        font-size: 1.25rem;
         font-weight: bold;
-        margin-bottom: 10px;
+        margin-top: 1.25rem;
+        margin-bottom: 0.3rem;
         border: none;
         cursor: pointer;
         border-radius: 100px;
@@ -1107,7 +1111,8 @@ h3 {
 
     /* Visual separator (line) */
     .separator {
-        width: 300px;
+        width: 230px;
+        margin: 0.5rem;
     }
 
     /* Link to contact page */
